[gd_scene load_steps=6 format=3 uid="uid://dhiwma1l2hepk"]

[ext_resource type="Script" uid="uid://b8xe7a2jneiql" path="res://scenes/user_interface/gameplay/progress_bars/progress_bar_status/progress_bar_status.gd" id="1_t5p2g"]
[ext_resource type="Texture2D" uid="uid://cjb6uo2nxjvpt" path="res://scenes/user_interface/gameplay/progress_bars/progress_bar_status/fill_left.png" id="1_uoink"]
[ext_resource type="Texture2D" uid="uid://dxtoklv2ugjba" path="res://scenes/user_interface/gameplay/progress_bars/progress_bar_status/outline_left.png" id="2_nioce"]
[ext_resource type="Texture2D" uid="uid://bqviw3b85hidh" path="res://scenes/user_interface/gameplay/progress_bars/progress_bar_status/fill_right.png" id="3_ywx6e"]
[ext_resource type="Texture2D" uid="uid://sbsfy85gcq5v" path="res://scenes/user_interface/gameplay/progress_bars/progress_bar_status/outline_right.png" id="4_t5p2g"]

[node name="ProgressBarStatus" type="HBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_t5p2g")

[node name="BarLeft" type="TextureProgressBar" parent="."]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
fill_mode = 1
texture_over = ExtResource("2_nioce")
texture_progress = ExtResource("1_uoink")
tint_under = Color(0.2, 0.2, 0.2, 0.901961)
tint_progress = Color(1, 1, 1, 0.882353)

[node name="BarRight" type="TextureProgressBar" parent="."]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_over = ExtResource("4_t5p2g")
texture_progress = ExtResource("3_ywx6e")
tint_under = Color(0.2, 0.2, 0.2, 0.901961)
tint_progress = Color(1, 1, 1, 0.882353)
